@@ -22,34 +22,34 @@
 \*****************************************************************************/
 
 #include "common.h"
+#include "rusage_clock.h"
 
-#if defined(IS_BGL_MACHINE)
-
-#ifdef HAVE_RTS_H
-# include <rts.h>
+#ifdef HAVE_SYS_TIME_H
+# include <sys/time.h>
 #endif
-#ifdef HAVE_STDIO_H
-# include <stdio.h>
+#ifdef HAVE_SYS_RESOURCE_H
+# include <sys/resource.h>
 #endif
-#include "bgl_clock.h"
 
-#define BITS_FOR_CYCLES_FACTOR 	14
-#define CYCLES_FACTOR          	(1ULL<<BITS_FOR_CYCLES_FACTOR)
-
-static unsigned long long factor;
-
-void bgl_Initialize (void)
+iotimer_t rusage_getTime (void)
 {
-	BGLPersonality personality;
-	unsigned personality_size = sizeof (personality);
+	struct rusage aux;
+	iotimer_t tmp;
 
-	rts_get_personality (&personality, personality_size);
-	factor = (1000000000ULL * CYCLES_FACTOR / personality.clockHz) + 1;
+	if (getrusage(RUSAGE_SELF,&aux) >= 0)
+	{
+		/* Get user time */
+		tmp =  aux.ru_utime.tv_sec*1000000 + aux.ru_utime.tv_usec;
+		/* Accumulate system time */
+		tmp += aux.ru_stime.tv_sec*1000000 + aux.ru_stime.tv_usec;
+	}
+	else
+		tmp = 0;
+
+	return tmp * 1000;
 }
 
-iotimer_t bgl_getTime (void)
+void rusage_Initialize (void)
 {
-	return (rts_get_timebase() * factor) >> BITS_FOR_CYCLES_FACTOR;
+        // Do nothing
 }
-
-#endif /* IS_BGL_MACHINE */
